--- a/src/App.css
+++ b/src/App.css
@@ -1,13 +1,15 @@
 #root {
+  height: 100%;
   text-align: center;
   display: flex;
   flex-direction: column;
   align-items: center;
+  justify-content: center;
 }
 
 .card {
-  width: 200px;
-  height: 200px;
+  width: 500px;
+  height: 300px;
   border: 1px solid black;
   position: relative;
   transform-style: preserve-3d;
@@ -32,4 +34,15 @@
 
 .back {
   transform: rotateX(180deg);
+}
+
+.button-panel {
+  margin-top: 1rem;
+  display: flex;
+  gap: 20px;
+}
+
+.button-panel > button {
+  width: 100px;
+  height: 25px;
 }
