--- a/src/App.css
+++ b/src/App.css
@@ -16,6 +16,12 @@
   transition: 1500ms;
   background-color: rgba(255, 255, 255, 0.535);
   perspective: 1000px;
+
+  box-shadow: 0 0 40px 0 rgba(0,0,0,.45);
+}
+
+.card:hover {
+  cursor: pointer;
 }
 
 .flipped {
@@ -48,5 +54,19 @@
 .button-panel > button {
   width: 100px;
   height: 25px;
-  box-shadow: 0 0 40px 0 rgba(0,0,0,.45);
+  font-size: 1rem;
+  border-radius: 10px;
+  border-style: none;
+}
+
+button:hover {
+  transform: scale(1.1);
+}
+
+#prevBtn {
+  background-color: rgba(247, 3, 3, 0.573);
+}
+
+#nextBtn {
+  background-color: rgba(9, 247, 9, 0.309);
 }
