--- a/src/App.css
+++ b/src/App.css
@@ -71,7 +71,7 @@ button:hover {
 
 form {
   margin-top: 2rem;
-  width: 25%;
+  width: Min(500px, 75%);
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -83,9 +83,41 @@ form {
   border: 1;
   padding: 0;
   font-size: 16px;
-  width: 300px;
+  width: 75%;
   text-align: center;
 }
+
+.submit-answer {
+  /* https://getcssscan.com/css-buttons-examples Button 29*/
+  align-items: center;
+  appearance: none;
+  background-image: radial-gradient(100% 100% at 100% 0, #2eabcd 0, #664074 100%);
+  border: 0;
+  border-radius: 6px;
+  box-shadow: rgba(45, 35, 66, .4) 0 2px 4px,rgba(45, 35, 66, .3) 0 7px 13px -3px,rgba(58, 65, 111, .5) 0 -3px 0 inset;
+  box-sizing: border-box;
+  color: #fff;
+  cursor: pointer;
+  display: inline-flex;
+  font-family: "JetBrains Mono",monospace;
+  height: 30px;
+  justify-content: center;
+  line-height: 1;
+  list-style: none;
+  overflow: hidden;
+  padding-left: 16px;
+  padding-right: 16px;
+  position: relative;
+  text-align: left;
+  text-decoration: none;
+  transition: box-shadow .15s,transform .15s;
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
+  white-space: nowrap;
+  will-change: box-shadow,transform;
+  font-size: 18px;
+} 
 .correct {
   border-color: green;
 }
