--- a/src/App.css
+++ b/src/App.css
@@ -69,16 +69,16 @@
   border-style: none;
 }
 
-button:hover {
+button:hover, .submit-answer:hover {
   transform: scale(1.1);
 }
 
 #prevBtn {
-  background-color: rgba(247, 3, 3, 0.573);
+  background-color: rgba(247, 3, 3, 0.845);
 }
 
 #nextBtn {
-  background-color: rgba(9, 247, 9, 0.309);
+  background-color: rgba(9, 247, 9, 0.473);
 }
 
 form {
@@ -91,12 +91,21 @@ form {
 }
 
 .user-input {
+  margin-top: -1;
+  position: relative;
+  border-radius: 1.5rem;
+  background-color:azure;
   appearance: none;
-  border: 1;
+  border-color: transparent;
   padding: 0;
   font-size: 16px;
   width: 75%;
   text-align: center;
+  outline: none;
+}
+
+.user-input:hover {
+  outline-style:groove;
 }
 
 .submit-answer {
@@ -130,6 +139,7 @@ form {
   will-change: box-shadow,transform;
   font-size: 18px;
 } 
+
 .correct {
   border-color: green;
 }
